--- a/src/pages/ItemsOfType.css
+++ b/src/pages/ItemsOfType.css
@@ -2,3 +2,11 @@
     text-align: left;
     padding-right: 20px;
 }
+
+table {
+    margin: auto;
+}
+
+table tr:nth-child(even) {
+    background-color: black; /* Replace with the color you want */
+}
