--- a/src/pages/SkillsTable.css
+++ b/src/pages/SkillsTable.css
@@ -16,5 +16,16 @@
 .skillTable th {
     min-width: 40px;
     text-align: left;
+}
 
+.skillTable a {
+  text-decoration: none;
+  /* Remove underline */
+  color: #d4d4d4;
+  /* Set color to white */
+}
+
+.skillTable a:visited {
+  color: #d4d4d4;
+  /* Set color to white for visited links */
 }
